@@ -24,6 +24,7 @@ BUG FIXES:
 +F3 causing search to skip every other match when search bar has focus
 +Fix bug in updating status after a conrol object was already deleted
 +Fix bug related to ? being in keyword helper lists for some languages
++Handle invalid regular expressions in find dialog
 
 #-----------------------------------------------------------------------------#
 
